Resolved bug with routing when there is now fragment in url, Added fix for 'min-height: 100vh' bug on IOS Safari

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -2,6 +2,7 @@
 
 .about {
   min-height: 100vh;
+  min-height: -webkit-fill-available; // IOS Safari
   display: flex;
   flex-direction: column;
   justify-content: center;
